--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -1,4 +1,11 @@
 <form action="/newtip" method="POST">
+    {% with messages = get_flashed_messages() %}  
+    {% if messages %}  
+          {% for message in messages %}  
+               <p>{{ message }}</p>  
+          {% endfor %}  
+    {% endif %}  
+    {% endwith %}  
     Otsikko:
     <input type="text" name="title">
     <br>
