--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,9 +1,29 @@
-<ul>
-    {% for tip in tips %}
-    <li>{{tip.title}} 
-        <a href={{tip.link}}>{{tip.link}}</a> 
-    </li>
-    {% endfor %}
-</ul>
+{% extends "layout.html" %}
 
-<a href="form"><button>Luo uusi vinkki</button></a>
+{% block body %}
+
+    <div class="table-responsive table-sm">
+        <table class="table table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Link</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for tip in tips %}
+                <tr>
+                    <td colspan="1">{{ tip.title }}</td>
+                    <td colspan="1"> <a href={{tip.link}}>{{ tip.link }}</a> </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <a href="form">
+        <button class="btn btn-primary" type="button">Luo uusi vinkki</button>
+    </a>
+
+{% endblock %}
