--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,7 @@
                 {% for tip in tips %}
                 <tr>
                     <td colspan="1">{{ tip.title }}</td>
-                    <td colspan="1"> <a href={{tip.link}}>{{ tip.link }}</a> </td>
+                    <td colspan="1"> <a href="{{ ''.join(['http://', tip.link]) }}">{{ tip.link }}</a> </td>
                 </tr>
                 {% endfor %}
             </tbody>
