--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Reading Tips</title>
+    <title> {% block title %} {% endblock %} - Reading Tips</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="/">Home</a>
-                    <a class="nav-link" href="form">Add new</a>
+                    <a class="nav-link" href="newtip">Add new</a>
                     <a class="nav-link" href="login">Login</a>
                     <a class="nav-link" href="#">Register</a>
                 </div>
