--- a/src/templates/userpage.html
+++ b/src/templates/userpage.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %} My tips {% endblock %}
+
 {% block body %}
 
 <div class="table-responsive table-sm">
