fixed remaining language conflicts

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -3,19 +3,19 @@
 {% block title %} Log in {% endblock %}
 
 {% block body %}
-<form action="" method="POST">
+<form action="/login" method="POST">
     
     <div class="form-row">
         <div class="form-group col-md-3">
             <label for="username" class="col-sm-2 col-form-label">Username</label>
-            <input type="text" class="form-control" name="title" id="exampleInputEmail1">
+            <input type="text" class="form-control" name="username" id="exampleInputEmail1">
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-md-3">
             <label for="password" class="col-sm-2 col-form-label">Password</label>
-            <input type="text" class="form-control" name="link" id="exampleInputEmail1">
+            <input type="password" class="form-control" name="password" id="exampleInputEmail1">
         </div>
     </div>
 
