--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/">Home</a>
                     <a class="nav-link" href="newtip">Add new</a>
                     <a class="nav-link" href="login">Login</a>
-                    <a class="nav-link" href="#">Register</a>
+                    <a class="nav-link" href="register">Register</a>
                 </div>
             </div>
         </div>
