--- a/src/templates/userpage.html
+++ b/src/templates/userpage.html
@@ -18,6 +18,7 @@
             <tr>
                 <td colspan="1">{{ tip.title }}</td>
                 <td colspan="1"> <a href="{{ tip.link }}">{{ tip.link }}</a> </td>
+                <td colspan="1"><a href="/deletetip/{{ tip.id}}"><button>Remove</button></a></td>
             </tr>
             {% endfor %}
         </tbody>
