--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -29,6 +29,13 @@
     </nav>
 
     <main role="main" class="container-sm">
+        {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
         {% block body %}
         <p>
             Content.
