--- a/src/templates/newtip.html
+++ b/src/templates/newtip.html
@@ -18,6 +18,12 @@
             <input type="text" class="form-control" name="link" id="exampleInputEmail1">
         </div>
     </div>
+    <div class="form-row">
+        <div class="form-group col-md-3">
+            <label for="category" class="col-sm-2 col-form-label">Tags</label>
+            <input type="text" class="form-control" name="tags" id="exampleInputEmail1">
+        </div>
+    </div>
 
     <button type="submit" class="btn btn-primary">Add new tip</button>
 </form>
