--- a/src/templates/userpage.html
+++ b/src/templates/userpage.html
@@ -5,6 +5,11 @@
 {% block body %}
 
 <div class="table-responsive table-sm">
+    <select name="tag_select">
+        {% for tag in tags %}
+        <option value="{{ tag.name }}">{{ tag.name }}</option>
+        {% endfor %}
+    </select>
     <table class="table table-hover">
         <thead class="thead-light">
             <tr>
