--- a/src/templates/userpage.html
+++ b/src/templates/userpage.html
@@ -5,12 +5,16 @@
 {% block body %}
 
 <div class="table-responsive table-sm">
-    <select name="tag_select">
-        <option value="{{ all }}">all</option>
-        {% for tag in tags %}
-        <option value="{{ tag.name }}">{{ tag.name }}</option>
-        {% endfor %}
-    </select>
+    <form action="/" method ="GET">
+        <select name="tag" onchange="this.form.submit()">
+            <option>tag</option>
+            <option value="all">all</option>
+            {% for tag in tags %}
+            <option value="{{ tag.name }}">{{ tag.name }}</option>
+            {% endfor %}
+            
+        </select>
+    </form>
     <table class="table table-hover">
         <thead class="thead-light">
             <tr>
@@ -24,7 +28,7 @@
             <tr>
                 <td colspan="1">{{ tip.title }}</td>
                 <td colspan="1"> <a href="{{ tip.link }}">{{ tip.link }}</a> </td>
-                <td colspan="1"><a href="/deletetip/{{ tip.id}}"><button>Remove</button></a></td>
+                <td colspan="1"><a href="/deletetip/{{ tip.id}}"><button class="btn btn-primary">Remove</button></a></td>
             </tr>
             {% endfor %}
         </tbody>
