--- a/src/templates/userpage.html
+++ b/src/templates/userpage.html
@@ -28,7 +28,7 @@
                     <a href="/deletetip/{{tip.id}}" class="btn btn-outline-primary">Remove</a>
                 </td>
                 <td colspan="1">
-                    <a href="/changetip" class="btn btn-outline-primary">Edit</a>
+                    <a href="/changetip/{{tip.id}}" class="btn btn-outline-primary">Edit</a>
                 </td>
             </tr>
             {% endfor %}
