--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -20,9 +20,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="/">Home</a>
-                    <a class="nav-link" href="newtip">Add new</a>
-                    <a class="nav-link" href="login">Login</a>
-                    <a class="nav-link" href="register">Register</a>
+                    <a class="nav-link" href="/newtip">Add new</a>
+                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/register">Register</a>
                 </div>
             </div>
         </div>
