--- a/src/templates/changetip.html
+++ b/src/templates/changetip.html
@@ -13,14 +13,14 @@
     <div class="form-row">
         <div class="form-group col-md-3">
             <label for="category" class="col-form-label">Title</label>
-            <input type="text" class="form-control" placeholder="Insert new title..." name="edited_title" id="title">
+            <input type="text" class="form-control" value={{tip.title}} name="edited_title" id="title">
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-md-3">
             <label for="category" class="col-sm-2 col-form-label">Link</label>
-            <input type="text" class="form-control" placeholder="Insert new link..." name="edited_link" id="link">
+            <input type="text" class="form-control" value={{tip.link}} name="edited_link" id="link">
         </div>
     </div>
 
