Integrate tip editing with tags

--- a/src/templates/changetip.html
+++ b/src/templates/changetip.html
@@ -12,15 +12,22 @@
 
     <div class="form-row">
         <div class="form-group col-md-3">
-            <label for="category" class="col-form-label">Title</label>
-            <input type="text" class="form-control" value={{tip.title}} name="edited_title" id="title">
+            <label for="title" class="col-form-label">Title</label>
+            <input type="text" class="form-control" value="{{tip.title}}" name="edited_title" id="title">
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-md-3">
-            <label for="category" class="col-sm-2 col-form-label">Link</label>
-            <input type="text" class="form-control" value={{tip.link}} name="edited_link" id="link">
+            <label for="link" class="col-sm-2 col-form-label">Link</label>
+            <input type="text" class="form-control" value="{{tip.link}}" name="edited_link" id="link">
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-3">
+            <label for="tags" class="col-form-label">Tags</label>
+            <input type="text" class="form-control" value="{{tags}}" name="edited_tags" id="tags">
         </div>
     </div>
 
