--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <main role="main" class="container-sm">
+    <main role="main" class="container-sm mt-3">
         {% with messages = get_flashed_messages() %}
           {% if messages %}
             {% for message in messages %}
