--- a/src/templates/newtip.html
+++ b/src/templates/newtip.html
@@ -3,26 +3,22 @@
 {% block title %} Add new tip {% endblock %}
 
 {% block body %}
+<h2 class="mb-3">New tip</h2>
+
 <form action="/newtip" method="POST">
-
-    <div class="form-row">
-        <div class="form-group col-md-3">
-            <label for="category" class="col-sm-2 col-form-label">Title</label>
-            <input type="text" class="form-control" name="title" id="exampleInputEmail1">
-        </div>
+    <div class="mb-3">
+        <label for="title-input" class="form-label">Title</label>
+        <input type="text" class="form-control" name="title" id="title-input">
     </div>
 
-    <div class="form-row">
-        <div class="form-group col-md-3">
-            <label for="category" class="col-sm-2 col-form-label">Link</label>
-            <input type="text" class="form-control" name="link" id="exampleInputEmail1">
-        </div>
+    <div class="mb-3">
+        <label for="text-input" class="form-label">Link</label>
+        <input type="text" class="form-control" name="link" id="text-input">
     </div>
-    <div class="form-row">
-        <div class="form-group col-md-3">
-            <label for="category" class="col-sm-2 col-form-label">Tags</label>
-            <input type="text" class="form-control" name="tags" id="exampleInputEmail1">
-        </div>
+
+    <div class="mb-3">
+        <label for="tags-input" class="form-label">Tags</label>
+        <input type="text" class="form-control" name="tags" id="tags-input">
     </div>
 
     <button type="submit" class="btn btn-primary">Add new tip</button>
