--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -3,22 +3,20 @@
 {% block title %} Register {% endblock %}
 
 {% block body %}
-<form action="/register" method="POST">
-    
-    <div class="form-row">
-        <div class="form-group col-md-3">
+<div class="card mx-auto" style="max-width: 100%; width: 40rem">
+    <div class="card-header">Register</div>
+    <form class="card-body" action="/register" method="POST">
+        <div class="mb-3">
             <label for="username" class="col-sm-2 col-form-label">Username</label>
-            <input type="text" class="form-control" name="username" id="exampleInputEmail1">
+            <input type="text" class="form-control" name="username" id="username">
         </div>
-    </div>
 
-    <div class="form-row">
-        <div class="form-group col-md-3">
+        <div class="mb-3">
             <label for="password" class="col-sm-2 col-form-label">Password</label>
-            <input type="password" class="form-control" name="password" id="exampleInputEmail1">
+            <input type="password" class="form-control" name="password" id="password">
         </div>
-    </div>
 
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+</div>
 {% endblock %}
