--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -29,10 +29,10 @@
     </nav>
 
     <main role="main" class="container-sm mt-3">
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=True) %}
           {% if messages %}
-            {% for message in messages %}
-            <p>{{ message }}</p>
+            {% for category, message in messages %}
+            <div class="alert alert-{{ "primary" if category == "message" else category }}">{{ message }}</div>
             {% endfor %}
           {% endif %}
         {% endwith %}
