Unify login & register layout

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -7,12 +7,12 @@
     <div class="card-header">Register</div>
     <form class="card-body" action="/register" method="POST">
         <div class="mb-3">
-            <label for="username" class="col-sm-2 col-form-label">Username</label>
+            <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" name="username" id="username">
         </div>
 
         <div class="mb-3">
-            <label for="password" class="col-sm-2 col-form-label">Password</label>
+            <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" name="password" id="password">
         </div>
 
