--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -13,7 +13,7 @@
 
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" name="password" id="username">
+            <input type="password" class="form-control" name="password" id="password">
         </div>
 
         <button type="submit" class="btn btn-primary">Login</button>
